[package]
name = "retorrent"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.13.4", features = [
    "rustls",
], default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }

repose-core = { path = "../repose/crates/repose-core" }
repose-ui = { path = "../repose/crates/repose-ui" }
repose-material = { path = "../repose/crates/repose-material" }
repose-text = { path = "../repose/crates/repose-text" }
repose-devtools = { path = "../repose/crates/repose-devtools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
rand = "0.10"
crc32c = "0.6"
bytes = "1"
bitvec = "1"
byteorder = "1"
parking_lot = "0.12"
dashmap = "6"
lru = "0.18"
url = "2"
memmap2 = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
open = "5"
percent-encoding = "2"
urlencoding = "2"
hex = "0.4"
web-time = "1"
igd = "0.12"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
gtk = "0.18"
tray-icon = "0.24"
rfd = "0.17"
repose-platform = { path = "../repose/crates/repose-platform", features = [
    "desktop",
] }
