[package]
name = "retorrent"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
name = "retorrent"
crate-type = ["cdylib", "rlib"]

[features]
default = []
desktop-bin = []

[[bin]]
name = "retorrent"
path = "src/main.rs"
required-features = ["desktop-bin"]

[package.metadata.android]
package = "dev.mlm.retorrent"
apk_name = "retorrent"
build_targets = ["aarch64-linux-android"]
split_per_abi = true
java_sources = ["java/"]

[package.metadata.android.application]
label = "Retorrent"
fullscreen = true

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE_DATA_SYNC"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[[package.metadata.android.application.service]]
name = "dev.mlm.retorrent.TorrentService"
foreground_service_type = "dataSync"
exported = false

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.13.4", features = [
    "rustls",
    "blocking",
], default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }

repose-core = { path = "../repose/crates/repose-core" }
repose-ui = { path = "../repose/crates/repose-ui" }
repose-material = { path = "../repose/crates/repose-material" }
repose-text = { path = "../repose/crates/repose-text" }
repose-devtools = { path = "../repose/crates/repose-devtools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
rand = "0.10"
crc32c = "0.6"
bytes = "1"
bitvec = "1"
byteorder = "1"
parking_lot = "0.12"
dashmap = "6"
lru = "0.18"
url = "2"
memmap2 = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
open = "5"
percent-encoding = "2"
urlencoding = "2"
hex = "0.4"
web-time = "1"
igd = "0.12"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
gtk = "0.18"
tray-icon = "0.24"
rlobkit-dialogs = { path = "../rlobkit/rlobkit-dialogs" }
repose-platform = { path = "../repose/crates/repose-platform", features = [
    "desktop",
] }

[target.'cfg(target_os = "android")'.dependencies]
repose-platform = { path = "../repose/crates/repose-platform", features = [
    "android",
] }
android_logger = "0.15"
winit = "0.30"
log = "0.4"
rlobkit-dialogs = { path = "../rlobkit/rlobkit-dialogs" }
jni = "0.22.4"
jni-min-helper = "0.4"
ndk-context = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
getrandom = { version = "0.3", features = ["wasm_js"] }
repose-platform = { path = "../repose/crates/repose-platform", features = [
    "web",
] }
winit = { version = "0.30", features = ["rwh_05"] }
