[package]
name = "retorrent"
version = "0.2.10"
edition = "2024"
resolver = "3"
license = "AGPL-3.0"

[lib]
name = "retorrent"
crate-type = ["cdylib", "rlib"]

[features]
default = []
desktop-bin = []

[[bin]]
name = "retorrent"
path = "src/main.rs"
required-features = ["desktop-bin"]

[package.metadata.android]
package = "org.mlm.retorrent"
apk_name = "retorrent"
build_targets = ["aarch64-linux-android"]
resources = "others/packaging/res"
split_per_abi = true
java_sources = ["java/"]

[package.metadata.android.application]
label = "Retorrent"
fullscreen = true
icon = "@drawable/ic_launcher_monochrome"

[package.metadata.android.sdk]
version_code = 16777738
min_sdk_version = 26
target_sdk_version = 35

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE"

[[package.metadata.android.uses_permission]]
name = "android.permission.FOREGROUND_SERVICE_DATA_SYNC"

[[package.metadata.android.uses_permission]]
name = "android.permission.POST_NOTIFICATIONS"

[[package.metadata.android.uses_permission]]
name = "android.permission.WAKE_LOCK"

[[package.metadata.android.application.activity]]
name = "org.mlm.retorrent.RetorrentActivity"
exported = true
launch_mode = "singleTask"

# Launcher icon
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

# .torrent files (content:// and file://)
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW"]
categories = [
    "android.intent.category.DEFAULT",
    "android.intent.category.BROWSABLE",
]

[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "content"
mime_type = "application/x-bittorrent"

[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "file"
mime_type = "application/x-bittorrent"

# Magnet links
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.VIEW"]
categories = [
    "android.intent.category.DEFAULT",
    "android.intent.category.BROWSABLE",
]

[[package.metadata.android.application.activity.intent_filter.data]]
scheme = "magnet"

[[package.metadata.android.application.service]]
name = "org.mlm.retorrent.TorrentService"
foreground_service_type = "dataSync"
exported = false

[dependencies]
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.13.4", features = [
    "rustls",
    "blocking",
], default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }

repose-core = { version = "0.19.5" }
repose-ui = { version = "0.19.5" }
repose-material = { version = "0.19.5" }
repose-text = { version = "0.19.5" }
repose-devtools = { version = "0.19.5" }
repose-platform = { version = "0.19.5" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.11"
rand = "0.10"
crc32c = "0.6"
bytes = "1"
bitvec = "1"
byteorder = "1"
parking_lot = "0.12"
dashmap = "6"
lru = "0.18"
url = "2"
memmap2 = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
percent-encoding = "2"
urlencoding = "2"
hex = "0.4"
web-time = "1"
igd-next = "0.17"
rlobkit-dialogs = "0.2.3"


# rlobkit-dialogs = { path = "../rlobkit/rlobkit-dialogs" }
# repose-core = { path = "../repose/crates/repose-core" }
# repose-ui = { path = "../repose/crates/repose-ui" }
# repose-material = { path = "../repose/crates/repose-material" }
# repose-text = { path = "../repose/crates/repose-text" }
# repose-devtools = { path = "../repose/crates/repose-devtools" }
# repose-platform = { path = "../repose/crates/repose-platform" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
open = "5"

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24.1", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }


[patch.crates-io]
winit = { git = "https://github.com/mlm-games/winit", branch = "0.30.x-cpick" }
tray-icon = { git = "https://github.com/mlm-games/tray-icon" }
muda = { git = "https://github.com/mlm-games/muda" }

# repose-platform = { path = "../repose/crates/repose-platform" }
# repose-core = { path = "../repose/crates/repose-core" }

# repose-core = { git = "https://github.com/mlm-games/repose", package = "repose-core" }
# repose-ui = { git = "https://github.com/mlm-games/repose", package = "repose-ui" }
# repose-material = { git = "https://github.com/mlm-games/repose", package = "repose-material" }
# repose-text = { git = "https://github.com/mlm-games/repose", package = "repose-text" }
# repose-devtools = { git = "https://github.com/mlm-games/repose", package = "repose-devtools" }
# repose-platform = { git = "https://github.com/mlm-games/repose", package = "repose-platform" }
# repose-macros = { git = "https://github.com/mlm-games/repose", package = "repose-macros" }
# repose-tree = { git = "https://github.com/mlm-games/repose", package = "repose-tree" }
# repose-render-wgpu = { git = "https://github.com/mlm-games/repose", package = "repose-render-wgpu" }
# repose-navigation = { git = "https://github.com/mlm-games/repose", package = "repose-navigation" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
winit = { version = "0.30", features = ["android-native-activity"] }
log = "0.4"
jni = "0.22.4"
jni-min-helper = "0.4"
ndk-context = "0.1"
rustls-platform-verifier = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
getrandom = { version = "0.4", features = ["wasm_js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }
log = "0.4"
tokio = { version = "1", features = [
    "rt",
    "sync",
    "time",
    "macros",
    "io-util",
] }
winit = { version = "0.30", features = ["rwh_05"] }
